--- a/GE.WebUI/Content/less/aphorisms.less
+++ b/GE.WebUI/Content/less/aphorisms.less
@@ -40,6 +40,10 @@
     width: 100%;
 }
 
+.ap-page .ap-list > ul{
+    margin-top:@def-pad*2;
+}
+
 @aut_img-size:90px;
 .ap-page .author-img {
     height: 90px;
@@ -65,6 +69,18 @@
     line-height:1.2;
 }
 
+.ap-list .content .info > ul{
+    list-style:none;
+    font-size:12px;
+    padding:0;
+    margin:0;
+}
+
+.ap-list .content .info > ul > li{
+    margin:0;
+    margin-right:@def-pad;
+}
+
 .ap-list-page .ap-list {
     margin-top: 0;
 }
@@ -74,7 +90,6 @@
     color: @color-white;
     padding: 0;
     margin: 0;
-    margin-top:@def-pad*2;
 }
 
 .ap-list ul > li {
