--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -44,7 +44,10 @@
                             <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
+                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы и цитаты</a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action(MVC.Employees.List())">Контакты</a>
                         </li>
                     </ul>
                 </div>
