--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -22,8 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style type="text/css">
-        html, body{
-            height:100%;
+        html, body {
+            height: 100%;
         }
     </style>
 </head>
@@ -48,5 +48,14 @@
         </form>
     </div>
     <script src="~/Content/dist/js/site.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('.form-signin').animate({
+                'width':'420'
+            }, function () {
+                $(this).width(500);
+            });
+        });
+    </script>
 </body>
 </html>
