--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -1,8 +1,11 @@
 ﻿@using SX.WebCore;
 @{
-        Layout = null;
-        var bgUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteBgPath).ToString();
-        var bg = string.IsNullOrEmpty(bgUrl) ? null : string.Format("style=background:url('{0}');", bgUrl);
+    Layout = null;
+    var bgUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteBgPath).ToString();
+    var bg = string.IsNullOrEmpty(bgUrl) ? null : string.Format("style=background:url('{0}');", bgUrl);
+    var values = Request.RequestContext.RouteData.Values;
+    var controllerName = values["controller"].ToString().ToLower();
+    var actionName = values["action"].ToString().ToLower();
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -46,11 +49,27 @@
     <![endif]-->
 </head>
 <body @(bg != null ? bg : null)>
-
+    <div class="container-fluid th-top-block">
+        <div class="row">
+            <div class="col-md-2">
+                @Html.SxThroughBanner(GE.WebUI.Infrastructure.BannerProvider.Provider.GetPlaceBanner(SxBanner.BannerPlace.Brand, controllerName, actionName), (b) => Url.Action(MVC.Pictures.Picture(b.PictureId)))
+            </div>
+            <div class="col-md-8">
+                @Html.SxThroughBanner(GE.WebUI.Infrastructure.BannerProvider.Provider.GetPlaceBanner(SxBanner.BannerPlace.Top, controllerName, actionName), (b) => Url.Action(MVC.Pictures.Picture(b.PictureId)))
+            </div>
+            <div class="col-md-2">
+                @Html.SxThroughBanner(GE.WebUI.Infrastructure.BannerProvider.Provider.GetPlaceBanner(SxBanner.BannerPlace.TopR, controllerName, actionName), (b) => Url.Action(MVC.Pictures.Picture(b.PictureId)))
+            </div>
+        </div>
+    </div>
     @Html.Partial(MVC.Shared.Views._NavBar)
     <div class="wrapper">
+
         @Html.Action(MVC.Games.GameList())
+
         <div class="container">
+            @Html.SxThroughBanner(GE.WebUI.Infrastructure.BannerProvider.Provider.GetPlaceBanner(SxBanner.BannerPlace.TopB, controllerName, actionName), (b) => Url.Action(MVC.Pictures.Picture(b.PictureId)))
+
             @if (ViewBag.H1 != null)
             {
                 <h1 @(ViewBag.H1CssClass != null ? "class=" + ViewBag.H1CssClass : "class=header")>@ViewBag.H1</h1>
