--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -122,10 +122,16 @@
     padding-bottom: @def-pad;
     margin-top: @def-pad*2;
     color: @color-white;
-    border-left-color: @color-red;
+    
     font-size: 1em;
     padding-right: @def-pad;
     font-style: italic;
+
+    border-radius:0 3px 3px 0;
+    background: linear-gradient(to left,rgba(255,255,255,.3),rgba(255,255,255,.2),rgba(255,255,255,.1));
+    border: 1px solid rgba(255,255,255,.1);
+    border-left-color: @color-red;
+    border-left-width:3px;
 }
 
 .mat-fwd > .ann {
@@ -144,6 +150,44 @@
 
 .m-info .badge{
     margin-left:5px;
+}
+
+.m-info .likes li
+{
+    @media (max-width: @screen-xs-max) {
+        width:100%;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
+}
+
+.m-info .likes li .btn{
+    @media (max-width: @screen-xs-max) {
+        width:100%;
+        margin-bottom:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
 
 .m-info .btn.up .fa, .m-info .btn.up .badge {
