--- a/GE.WebUI/Views/Aphorisms/_List.cshtml
+++ b/GE.WebUI/Views/Aphorisms/_List.cshtml
@@ -23,7 +23,7 @@
         @for (int i = 0; i < Model.Length; i++)
             {
                 var a = Model[i];
-            <li>
+            <li onclick="changeLocation(this)">
                 @Html.DisplayFor(x=>a)
             </li>
         }
