--- a/GE.WebUI/Content/less/game-list.less
+++ b/GE.WebUI/Content/less/game-list.less
@@ -25,7 +25,7 @@
 .game-menu {
     background-color: @color-game-menu;
     z-index: 2;
-    position: fixed;
+    /*position: fixed;*/
     width: 100%;
 
     @media (max-width: @screen-xs-max) {
