--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -106,4 +106,5 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
             </div>
         </div>
     </div>
+    @Html.Partial(MVC.Banners.Views._Bottom)
 </footer>
