--- a/GE.WebAdmin/Views/Banners/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Banners/_GridView.cshtml
@@ -19,6 +19,7 @@
                 } },
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Title", Caption="Заголовок"},
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Place", Caption="Позиция"},
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="ClicksCount", Caption="Кликов"},
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="PictureId", Caption="Картинка", Template=(p)=> {
                 return string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{1}\" data-toggle=\"tooltip\" data-placement=\"left\" title=\"Помотреть картинку\" href=\"{0}\"><i class=\"fa fa-picture-o\"></i></a>", Url.Action(MVC.Pictures.Picture(p.PictureId)), p.Title);
             } }
