--- a/GE.WebAdmin/Content/less/author-ap.less
+++ b/GE.WebAdmin/Content/less/author-ap.less
@@ -1,8 +1,16 @@
-﻿#grid-author-ap tr > td:nth-child(2n)
+﻿@import (reference) "colors.less";
+
+#grid-author-ap tr > td:nth-child(2n)
 {
     width:50px;
     text-align:center;
 }
-#grid-author-ap tr > td:nth-child(2n) img {
-    height:30px;
+
+@size: 30px;
+#grid-author-ap tr > td:nth-child(2n) figure {
+    height:@size;
+    width:@size;
+    background-size:cover;
+    background-position:center center;
+    border:2px solid gray;
 }
