--- a/GE.WebAdmin/Views/Pictures/Index.cshtml
+++ b/GE.WebAdmin/Views/Pictures/Index.cshtml
@@ -8,6 +8,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<p class="text-warning" style="max-width:600px;">
+    При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать 300 kB. Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow">http://resizepiconline.com</a>)
+</p>
 <br />
 <div id="grid-pictures">
     @Html.Partial(MVC.Pictures.Views._GridView, Model)
