--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -13,25 +13,31 @@ footer {
 
     /*@media (max-width: @screen-xs-max) {
         background-image: url(../i/footer-bg-xs.jpg);
-        background-size: 100% 100%;
+        background-size: cover;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
         background-image: url(../i/footer-bg-sm.jpg);
-        background-size: auto 100%;
+        background-size: cover;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
         background-image: url(../i/footer-bg-md.jpg);
+        background-size: cover;
     }
 
     @media (min-width: @screen-lg-min) {
         background-image: url(../i/footer-bg-lg.jpg);
+        background-size: cover;
     }*/
 }
 
 footer a, footer a:hover, footer a:focus {
     color: inherit;
+}
+
+footer .top{
+    border-bottom: 1px solid rgba(255,255,255,.1);
 }
 
 footer .top, footer .bottom {
