--- a/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
+++ b/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
@@ -3,15 +3,18 @@
 }
 <ul class="icons">
     <li>
-        <a href="https://www.facebook.com/groups/792476727555167/"><span class="fa fa-facebook"></span></a>
+        <a href="https://www.facebook.com/groups/792476727555167/" target="_blank"><span class="fa fa-facebook"></span></a>
     </li>
     <li>
-        <a href="https://twitter.com/Ya_Dobrii_Panda"><span class="fa fa-twitter"></span></a>
+        <a href="https://twitter.com/Ya_Dobrii_Panda" target="_blank"><span class="fa fa-twitter"></span></a>
     </li>
     <li>
-        <a href="https://www.youtube.com/channel/UCnNNDFj49gLAbljBF_e9AbQ"><span class="fa fa-youtube-play"></span></a>
+        <a href="https://www.youtube.com/channel/UCnNNDFj49gLAbljBF_e9AbQ" target="_blank"><span class="fa fa-youtube-play"></span></a>
     </li>
     <li>
-        <a href="https://vk.com/panda_online_game_news"><span class="fa fa-vk"></span></a>
+        <a href="https://vk.com/panda_online_game_news" target="_blank"><span class="fa fa-vk"></span></a>
+    </li>
+    <li>
+        <a href="https://plus.google.com/b/108948280347916469654/108948280347916469654/about?gmbpt=true&hl=ru" target="_blank"><span class="fa fa-google"></span></a>
     </li>
 </ul>
