--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     Layout = null;
+    var siteName = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
+    var logoUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
 }
 <footer>
     <div class="shadow"></div>
@@ -78,7 +80,9 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="first">
-                        <img alt="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName))" src="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath)+"?height=30")" />
+                        <a href="/">
+                            <img alt="@siteName.Value" src="@logoUrl.Value">
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-5">
