--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -1,4 +1,8 @@
-﻿<nav class="navbar navbar-default">
+﻿@{ 
+    var siteName = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
+    var logoUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
+}
+<nav class="navbar navbar-default">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -8,7 +12,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName))</a>
+            <a class="navbar-brand" href="/">
+                <img alt="@siteName.Value" src="@logoUrl.Value">
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
